2007-05-02  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Move the ENOENT errno check from
	the if conditionals to the block body to avoid comparing against an
	undef value on the next elsif conditional.

2007-04-28  Aaron M. Ucko  <ucko@debian.org>

	* scripts/dpkg-shlibdeps.pl (unique_libfiles): New variable. Do not
	track duped libraries already on it.

2007-04-11  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-parsechangelog.pl: Use static and warnings. Declare
	variables with 'my'.
	* scripts/dpkg-scansources.pl: Likewise.
	* scripts/controllib.pl: Likewise. Globals with 'our'.
	* scripts/822-date.pl: Likewise.
	* scripts/dpkg-architecture.pl: Likewise.
	* scripts/dpkg-checkbuilddeps.pl: Likewise.
	* scripts/dpkg-distaddfile.pl: Likewise.
	* scripts/dpkg-genchanges.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-shlibdeps.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/controllib.pl (parsecdata): Use 'my' instead of 'local'.
	(subprocerr): Likewise.
	(debian_arch_fix): Likewise.
	* scripts/dpkg-architecture.pl (debian_to_gnu): Likewise.
	(gnu_to_debian): Likewise.
	* scripts/controllib.pl (getfowner): Remove redundant closures of
	STDIN.

2007-04-11  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (@pkg_dep_fields): Reorder fields by
	importance.
	(set_field_importance): New function.
	(sort_field_by_importance): Likewise.
	(outputclose): Use sort_field_by_importance instead of direct sorting.
	* scripts/changelog/debian.pl (%fieldimps): Do not set directly, use
	set_field_importance instead.
	* scripts/dpkg-genchanges.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/changelog/debian.pl (@changelog_fields): New variable.
	* scripts/dpkg-genchanges.pl (@changes_fields): New variable.
	* scripts/dpkg-gencontrol.pl (@control_fields): New variable.
	* scripts/dpkg-source.pl (@dsc_fields): New variable.