@@ -1,3 +1,9 @@
+2007-05-04  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Call read_link_group also in
+	'install' mode, but do not exit nor print an error if the link goup
+	file does not exist.
+
 2007-05-02  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl: Move the ENOENT errno check from
